--- a/index.html
+++ b/index.html
@@ -202,6 +202,8 @@
         </div>
     </div>
 
+    ESSA É UMA ALTERAÇÃO TESTE
+
     <script src="js/main.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
