--- a/index.html
+++ b/index.html
@@ -144,29 +144,29 @@
                     </div>
                 </div>
                 <div class="item">
-                    <div onclick="selectionItemDessert(this)">
-                        <img src="imgs/pudim.png"/>
-                        <h3>Pudim</h3>
-                        <p>Apenas pudim</p>
-                        <span>R$ 7,90</span>
+                    <div onclick="selectionItemDessert(this, 'Brownie Chocolate', 54.00)">
+                        <img src="imgs/brownie-chocolate.jpeg"/>
+                        <h3>Brownie Chocolate</h3>
+                        <p>Bolo de chocola...</p>
+                        <span>R$ 54,00</span>
                         <ion-icon name="checkmark-circle"></ion-icon>
                     </div>
                 </div>
                 <div class="item">
-                    <div onclick="selectionItemDessert(this)">
-                        <img src="imgs/pudim.png"/>
-                        <h3>Pudim</h3>
-                        <p>Apenas pudim</p>
-                        <span>R$ 7,90</span>
+                    <div onclick="selectionItemDessert(this, 'Petit Gateau', 44.00)">
+                        <img src="imgs/petit-gateau.jpeg"/>
+                        <h3>Petit Gateau</h3>
+                        <p>Bolinho quente de...</p>
+                        <span>R$ 44,00</span>
                         <ion-icon name="checkmark-circle"></ion-icon>
                     </div>
                 </div>
                 <div class="item">
-                    <div onclick="selectionItemDessert(this)">
-                        <img src="imgs/pudim.png"/>
-                        <h3>Pudim</h3>
-                        <p>Apenas pudim</p>
-                        <span>R$ 7,90</span>
+                    <div onclick="selectionItemDessert(this, 'Torta de Banana Cremosa', 43.00)">
+                        <img src="imgs/torta-de-banana-cremosa.jpeg"/>
+                        <h3>Torta de Banana</h3>
+                        <p>Fatia de tor...</p>
+                        <span>R$ 43,00</span>
                         <ion-icon name="checkmark-circle"></ion-icon>
                     </div>
                 </div>
@@ -201,8 +201,6 @@
             <button onclick="showHideOrder()">Cancelar</button>
         </div>
     </div>
-
-    ESSA É UMA ALTERAÇÃO TESTE
 
     <script src="js/main.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
