--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <div onclick="selectionItemDrink(this, 'Guaraná 2L', 14.90)">
                         <img src="imgs/guarana-2l.jpeg"/>
                         <h3>Guaraná 2L</h3>
-                        <p>Antarctica Guaraná 2l</p>
+                        <p>Guaraná 2l</p>
                         <span>R$ 14,90</span>
                         <ion-icon name="checkmark-circle"></ion-icon>
                     </div>
